<resources>
    <string name="app_name">Daddy Kost</string>
    <string name="reg_as">Register Sebagai</string>
    <string name="pencari_kost">Pencari Kos</string>
    <string name="owner_kost">Owner Kos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">Nomor telepon</string>
    <string name="e_mail">E-Mail</string>
    <string name="register">Register</string>
    <string name="login_here">Login Disini</string>
    <string name="login">LOGIN</string>
    <string name="register_here">Daftar Akun Disini</string>
    <string name="user_register">User Register</string>
    <string name="owner_register">Owner Register</string>
    <string name="list_mode">List Mode</string>
    <string-array name="user_option">
        <item>Daftar Sebagai</item>
        <item>Owner Kos</item>
        <item>Pencari Kos</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>