<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".UserRegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_register"
        android:textColor="@color/custom_blue_dark"
        android:layout_marginTop="14dp"
        android:textSize="22sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_user_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/full_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_user_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_user_fullname"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/phone_number">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_user_phonenumber"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/e_mail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_user_email"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_user_username"
        android:layout_marginTop="12dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:backgroundTint="@color/custom_blue_dark"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="2dp"
        android:layout_below="@id/title_user_password"/>
    <Button
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_user_register"
        android:text="@string/login_here"
        android:textSize="14sp"
        android:textColor="@color/custom_blue_dark"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="50dp"/>
</RelativeLayout>