<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RoleDivideActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_daddykost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_as"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="start"/>
        <Button
            android:id="@+id/btn_to_user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pencari_kost"/>
        <Button
            android:id="@+id/btn_to_owner_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_kost"/>
    </LinearLayout>
</RelativeLayout>