<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_daddykost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        app:hintTextColor="@color/custom_blue_dark"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        app:errorEnabled="true"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ip_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lo_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lo_username"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/custom_blue_dark"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/custom_blue_dark"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ip_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:backgroundTint="@color/custom_blue_dark"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="14sp"
        android:padding="14dp"
        android:layout_marginHorizontal="2dp"
        android:layout_below="@id/lo_password"/>
    <Button
        android:id="@+id/btn_to_divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/register_here"
        android:textSize="14sp"
        android:textColor="@color/custom_blue_dark"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="80dp"/>
</RelativeLayout>